# ClientServer

./: README.md
Client-C++/: CMakeLists.txt  makefile
Client-C++/include/: KeyboardReader.h  ServerReader.h  connectionHandler.h
Client-C++/src/: BGSclient.cpp  KeyboardReader.cpp  ServerReader.cpp  connectionHandler.cpp
Server-Java/src/main/java/bgu/spl/net/api/: MessageEncoderDecoderImpl.java
Server-Java/src/main/java/bgu/spl/net/api/bidi/: BidiMessagingProtocolImpl.java  Connections.java  ConnectionsImpl.java  Message.java  User.java
Server-Java/src/main/java/bgu/spl/net/api/bidi/messages/: Ack.java  Block.java  Error.java  Follow.java  Login.java  Logout.java  Logstat.java  Notification.java  Post.java  PrivateMessage.java  Register.java  Stat.java
Server-Java/src/main/java/bgu/spl/net/impl/system/: TPCmain.java
Server-Java/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  REACTORmain.java  Server.java
